--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 </head>
 <body>
 	<h1>Proxy Viewer</h1>
-	<form action="">
+	<form action="proxy.php" method="get">
 		<label for="url">Enter URL:</label><br>
 		<input type="text" id="url" name="url"><br>
 		<input type="submit" value="Submit">
 	</form> 
 	<br>
-	<iframe src="proxy.php?url=[proxied URL goes here]" style="width:100%; height:500px;"></iframe>
+	<iframe src="" style="width:100%; height:500px;" id="proxy-frame"></iframe>
 </body>
 </html>
