--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>Proxy Viewer</h1>
-	<form action="proxy.php" method="get">
+	<form action="myproxy.php" method="get">
 		<label for="url">Enter URL:</label><br>
 		<input type="text" id="url" name="url"><br>
 		<input type="submit" value="Submit">
