--- a/index.html
+++ b/index.html
@@ -5,12 +5,50 @@
 </head>
 <body>
 	<h1>Proxy Viewer</h1>
-	<form action="myproxy.php" method="get">
+	<form action="proxy.php" method="get">
 		<label for="url">Enter URL:</label><br>
 		<input type="text" id="url" name="url"><br>
 		<input type="submit" value="Submit">
 	</form> 
 	<br>
+	<label class="switch">
+	  <input type="checkbox" id="darkmode-toggle">
+	  <span class="slider round"></span>
+	</label>
+	<br>
 	<iframe src="" style="width:100%; height:500px;" id="proxy-frame"></iframe>
 </body>
-</html>
+<style>
+	/* The switch - the box around the slider */
+	.switch {
+	  position: relative;
+	  display: inline-block;
+	  width: 60px;
+	  height: 34px;
+	}
+
+	/* Hide default HTML checkbox */
+	.switch input {
+	  opacity: 0;
+	  width: 0;
+	  height: 0;
+	}
+
+	/* The slider */
+	.slider {
+	  position: absolute;
+	  cursor: pointer;
+	  top: 0;
+	  left: 0;
+	  right: 0;
+	  bottom: 0;
+	  background-color: #ccc;
+	  -webkit-transition: .4s;
+	  transition: .4s;
+	}
+
+	.slider:before {
+	  position: absolute;
+	  content: "";
+	  height: 26px;
+	  width: 26px
