--- a/index.html
+++ b/index.html
@@ -1,54 +1,61 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Proxy Viewer</title>
-</head>
-<body>
-	<h1>Proxy Viewer</h1>
-	<form action="proxy.php" method="get">
-		<label for="url">Enter URL:</label><br>
-		<input type="text" id="url" name="url"><br>
-		<input type="submit" value="Submit">
-	</form> 
-	<br>
-	<label class="switch">
-	  <input type="checkbox" id="darkmode-toggle">
-	  <span class="slider round"></span>
-	</label>
-	<br>
-	<iframe src="" style="width:100%; height:500px;" id="proxy-frame"></iframe>
-</body>
-<style>
-	/* The switch - the box around the slider */
-	.switch {
-	  position: relative;
-	  display: inline-block;
-	  width: 60px;
-	  height: 34px;
-	}
+	<title>Chicago2</title>
+	<style>
+		/* Style the body */
+		body {
+			font-family: Arial, sans-serif;
+			margin: 0;
+			padding: 0;
+		}
 
-	/* Hide default HTML checkbox */
-	.switch input {
-	  opacity: 0;
-	  width: 0;
-	  height: 0;
-	}
+		/* Style the navigation bar */
+		.navbar {
+			display: flex;
+			flex-direction: row;
+			justify-content: flex-start;
+			align-items: stretch;
+			height: 64px;
+			background-color: #333;
+			color: #fff;
+		}
 
-	/* The slider */
-	.slider {
-	  position: absolute;
-	  cursor: pointer;
-	  top: 0;
-	  left: 0;
-	  right: 0;
-	  bottom: 0;
-	  background-color: #ccc;
-	  -webkit-transition: .4s;
-	  transition: .4s;
-	}
+		/* Style the navigation links */
+		.navbar a {
+			display: block;
+			padding: 0 16px;
+			line-height: 64px;
+			text-decoration: none;
+			color: #fff;
+			font-size: 18px;
+		}
 
-	.slider:before {
-	  position: absolute;
-	  content: "";
-	  height: 26px;
-	  width: 26px
+		/* Style the active navigation link */
+		.navbar a.active {
+			background-color: #00bfff;
+			color: #333;
+		}
+
+		/* Style the content area */
+		.content {
+			display: flex;
+			flex-direction: row;
+			justify-content: flex-start;
+			align-items: stretch;
+			margin: 16px;
+		}
+
+		/* Style the navigation menu */
+		.menu {
+			display: flex;
+			flex-direction: column;
+			justify-content: flex-start;
+			align-items: stretch;
+			width: 200px;
+			background-color: #f1f1f1;
+			border-radius: 8px;
+			padding: 16px;
+		}
+
+		/* Style the menu items
